syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "getSum";

package forum;

service ICheckSum {
  rpc getSum (google.protobuf.Empty) returns (SumResult);
}

message SumResult {
  int32 value = 1;
}