syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "vector";

package forum;

service IVector {
  rpc read(ReadMessage) returns (VectorResponse);
  rpc write(WriteMessage) returns (google.protobuf.Empty);
}

message ReadMessage {
  int32 pos = 1;
}

message WriteMessage {
  int32 pos = 1;
  int32 value = 2;
}

message VectorResponse {
  int32 value = 1;
}